# robotframework-tracer

./: .gitignore  .otel_config.example  CONTRIBUTING.md  DEVELOPMENT.md  LOGS_SIGNOZ_ISSUE.md  Makefile  PHASE2_COMPLETE.md  PHASE2_PROGRESS.md  PHASE2_TEST_REPORT.md  PHASE3_COMPLETE.md  PHASE4_STATUS.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  RELEASE_v0.4.0.md  STATUS.md  SUCCESS.md  TESTING_CENTRALIZED_OTEL.md  TEST_CONFIG.md  TEST_COVERAGE_REPORT.md  TRACE_ID_METRICS_FIX.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_centralized_otel.py  test_centralized_otel.sh  test_hierarchy.robot  test_log_capture_debug.py  test_logs_api_debug.py  test_logs_verbose.py
.github/workflows/: lint.yml  publish.yml  test.yml
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  verify_screenshots.py
docker/tests/: 01_embedded_mode.robot  02_path_mode.robot  03_none_mode.robot  04_after_keyword_failure.robot  run_scenarios.sh  selenium_setup.resource
docker/tests/configs/: embedded.json  none.json  path.json
docs/: ARCHITECTURE.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  LICENSE  PUBLISHING.md  PYPI_SETUP.md  attributes.md  configuration.md  skeleton.py  span-naming.md  trace-propagation.md
examples/: .rf-tracer.ci.json  .rf-tracer.minimal.json  .rf-tracer.screenshots.json  README.md  docker-compose.yml  example_test.robot  otel-collector-config.yaml  web_example.robot
src/robotframework_tracer/: __init__.py  attributes.py  config.py  listener.py  output_filter.py  screenshot.py  span_builder.py
src/robotframework_tracer/presets/: full.json  minimal.json
src/robotframework_tracer/schemas/: config-v1.json  output-filter-v1.json
tests/integration/: simple_trace_context.robot  test_integration.py  trace_context.robot
tests/integration/test_suites/: nested.robot  simple.robot
tests/unit/: conftest.py  test_attributes.py  test_config.py  test_context_propagation.py  test_listener.py  test_screenshot.py  test_span_builder.py  test_trace_context.py  test_trace_output_file.py
