[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robotframework-tracer"
version = "0.5.6"
description = "OpenTelemetry distributed tracing for Robot Framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Robot Framework Tracer Contributors"}
]
keywords = ["robotframework", "testing", "tracing", "opentelemetry", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Robot Framework",
]
dependencies = [
    "robotframework>=6.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
grpc = [
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/tridentsx/robotframework-tracer"
Documentation = "https://github.com/tridentsx/robotframework-tracer/blob/main/README.md"
Repository = "https://github.com/tridentsx/robotframework-tracer"
Issues = "https://github.com/tridentsx/robotframework-tracer/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
robotframework_tracer = ["presets/*.json", "schemas/*.json"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/robotframework_tracer --cov-report=html --cov-report=term-missing"
